# pubmetric

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  GC_NW_organised.py  QC_pipeline.ipynb  README.md  basic_citationgraph.py  doi_pmid_library_empty.json  github_workflomics_stats.ipynb  pubmetric_demo.ipynb  pyproject.toml  requirements.txt  setup.py  stat_visualisation.ipynb  workflomics_QC_pipeline.ipynb
.github/workflows/: build.yml  publish-docker.yml  publish.yml
WFQC/: data.py  metrics.py  network.py  workflow.py
api/: main.py
cocitation_graph/: doi_pmid_library.json  tool_metadata_test20.json
data/: biotools_metadata_topic_0121_20240523.csv  doi_pmid_library.json  random_dataset.json
data/out_202405211310/: edges.pkl  graph.pkl  node_degree_dict.pkl  nr_citations.pkl  tools.pkl
data/out_citation/: edges.pkl  graph.pkl  node_degree_dict.pkl  nr_citations.pkl  tools.pkl
data/out_cocitation/: edges.pkl  graph.pkl  node_degree_dict.pkl  nr_citations.pkl  tools.pkl
data/out_default/: doi_pmid_library.json  graph.pkl  tool_metadata.json
dev-viz-notebooks/: APE_datagen.ipynb  ML_metric_eval.ipynb  TTP_data.ipynb  broken_dataset_gen.ipynb  edges.ipynb  graph_statistics.ipynb  metric_dev.ipynb  network_dev.ipynb  parse_biotools.ipynb  random_dataset_gen .ipynb  random_dataset_gen.ipynb  rated_dataset_expanded.ipynb  rated_dataset_parsing.ipynb  steiner_tree.ipynb  style.py  thresholding.ipynb  workflow_length_stats.ipynb  workflow_parsing.ipynb
domain_annotations/: bio.tools_full.json
new_cocitation_graph/: graph.pkl  tool_metadata.json
src/WFQC/: data.py  metrics.py  network.py
src/pubmetric/: api_controller.py  data.py  fetch_tools.py  log.py  metrics.py  network.py  pckg_dev.py  workflow.py
src/wfqc/: api_controller.py  api_test.py  data.py  metrics.py  network.py  pckg_dev.py  workflow.py
tests/: example_graph.py  schemas.py  test_api.py  test_api_controller.py  test_data.py  test_metrics.py  test_network.py  test_pckg_dev.py  test_workflow.py
tests/data/: biotools_metadata_topic_0121_20250516.csv  candidate_workflow_repeated_tool.cwl  candidate_workflow_test.cwl  example_graph.py  graph.pkl  schemas.py  test_graph.py  tool_metadata.json  tool_metadata_test20.json  tool_metadata_test20_topic_0121_20250705.json
workflows/: candidate_workflow_1.cwl  candidate_workflow_12.cwl  candidate_workflow_17.cwl  candidate_workflow_20.cwl  candidate_workflow_22.cwl  candidate_workflow_3.cwl  candidate_workflow_6.cwl  input.yml
workflows/APE/: candidate_workflow_1.cwl  candidate_workflow_10.cwl  candidate_workflow_100.cwl  candidate_workflow_1000.cwl  candidate_workflow_1001.cwl  (+996 more)
(+11 files in other folders)
