[tool.poetry]
name = "pubmetric"
version = "0.1.0"
description = "Cocitation based metric for workflow evaluation"
authors = ["Alma Nilsson <alma.as.nilsson@gmail.com>", "Vedran Kasalica", "Magnus Palmblad"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Workflomics/pubmetric"
repository = "https://github.com/Workflomics/pubmetric"
documentation = "https://workflomics.readthedocs.io/en/latest/developer-guide/pubmetric.html"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.10"
aiohttp = "^3.9.5"
asyncio = "^3.4.3"
igraph = "^0.11.6"
requests = "*"
py4cytoscape = "^1.9.0"
pandas = "^2.2.3"
tqdm = "^4.66.2"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
jsonpath-ng = "^1.7.0"
cwl_utils = "^0.15"
fastapi = "^0.115.2"
scikit-learn = "^1.5.2"
apscheduler = "*"
uvicorn = "^0.31.1"
python-multipart = "^0.0.12"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-datadir = "^1.3.1"
pytest-asyncio = "^0.14.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
